force-app/main/default/objects/Account/fields/IAA_Local_Tow__c.field-meta.xml
<CustomField>
    <fullName>IAA_Local_Tow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do they use IAA Local Tow?</inlineHelpText>
    <label>IAA Local Tow</label>
    <type>Checkbox</type>
</CustomField>