force-app/main/default/objects/Account/fields/IAA_Share__c.field-meta.xml
<CustomField>
    <fullName>IAA_Share__c</fullName>
    <inlineHelpText>How much share IAA has in volume for Account</inlineHelpText>
    <label>IAA Share (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>