force-app/main/default/objects/Account/fields/IAA_Transport__c.field-meta.xml
<CustomField>
    <fullName>IAA_Transport__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do they use IAA Transport?</inlineHelpText>
    <label>IAA Transport</label>
    <type>Checkbox</type>
</CustomField>