force-app/main/default/objects/Account/fields/IBuyFast_Manual_Auto__c.field-meta.xml
<CustomField>
    <fullName>IBuyFast_Manual_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IBuyFast-Manual/Auto</label>
    <type>Checkbox</type>
</CustomField>