force-app/main/default/objects/Account/fields/Initiated_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Initiated_Approval_Process__c</fullName>
    <inlineHelpText>this field is to check which Account Approval is fired. because there are more than one approval process on Account</inlineHelpText>
    <label>Initiated Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SubmitContractAdminApproval</fullName>
            </value>
            <value>
                <fullName>ChangeAccountOwner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>