force-app/main/default/objects/Account/fields/Inspection_Services__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an Account opted in to use IAA&apos;s Inspection Service.</description>
    <inlineHelpText>Indicates if an Account opted in to use IAA&apos;s Inspection Service.</inlineHelpText>
    <label>Inspection Services</label>
    <type>Checkbox</type>
</CustomField>