force-app/main/default/objects/Account/fields/Inspection_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Vendors__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do they use Inspection Vendors?</inlineHelpText>
    <label>Inspection Vendors</label>
    <type>Checkbox</type>
</CustomField>