force-app/main/default/objects/Account/fields/Is_AuctionAccess_User__c.field-meta.xml
<CustomField>
    <fullName>Is_AuctionAccess_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AuctionAccess User</label>
    <type>Checkbox</type>
</CustomField>