force-app/main/default/objects/Account/fields/Is_Broker_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Broker_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Broker Created</label>
    <type>Checkbox</type>
</CustomField>