force-app/main/default/objects/Account/fields/IS_CAT_A_BUYER__c.field-meta.xml
<CustomField>
    <fullName>IS_CAT_A_BUYER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CAT A BUYER</label>
    <type>Checkbox</type>
</CustomField>