force-app/main/default/objects/Account/fields/Is_Crush_Vehicle_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Is_Crush_Vehicle_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Crush Vehicle Buyer</label>
    <type>Checkbox</type>
</CustomField>