force-app/main/default/objects/Account/fields/Is_Min_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Is_Min_Bidder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Min Bidder</label>
    <type>Checkbox</type>
</CustomField>