force-app/main/default/objects/Account/fields/Is_Site_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Is_Site_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Site Purchaser</label>
    <type>Checkbox</type>
</CustomField>