force-app/main/default/objects/Account/fields/KAR_Createdbyid__c.field-meta.xml
<CustomField>
    <fullName>KAR_Createdbyid__c</fullName>
    <description>Created by ID for Buyer Service KAR account</description>
    <label>KAR Createdbyid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>