force-app/main/default/objects/Account/fields/KAR_ID__c.field-meta.xml
<CustomField>
    <fullName>KAR_ID__c</fullName>
    <description>Salesforce ID from KAR.</description>
    <externalId>true</externalId>
    <label>KAR ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>