force-app/main/default/objects/Account/fields/KAR_OwnerID__c.field-meta.xml
<CustomField>
    <fullName>KAR_OwnerID__c</fullName>
    <description>KAR Account owner ID from migrated buyer service account.</description>
    <label>KAR OwnerID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>