force-app/main/default/objects/Account/fields/Last_ASAP_Sync_Error_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_ASAP_Sync_Error_Date_Time__c</fullName>
    <label>Last ASAP Sync Error Date Time</label>
    <type>DateTime</type>
</CustomField>