force-app/main/default/objects/Account/fields/Last_Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Bid_Date__c</fullName>
    <label>Last Bid Date</label>
    <type>Date</type>
</CustomField>