force-app/main/default/objects/Account/fields/Last_Registration_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Registration_Payment_Amount__c</fullName>
    <description>Displays the amount paid when the buyer last registered. (YTD)</description>
    <inlineHelpText>Displays the amount paid when the buyer last registered. (YTD)</inlineHelpText>
    <label>Last Registration Payment Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>