force-app/main/default/objects/Account/fields/Last_Registration_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Registration_Payment_Date__c</fullName>
    <description>Displays the date when the buyer last registered.</description>
    <inlineHelpText>Displays the date when the buyer last registered.</inlineHelpText>
    <label>Last Registration Payment Date</label>
    <type>DateTime</type>
</CustomField>