force-app/main/default/objects/Account/fields/Last_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sold_Date__c</fullName>
    <label>Last Sold Date</label>
    <type>Date</type>
</CustomField>