force-app/main/default/objects/Account/fields/lco1__Amount_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>lco1__Amount_at_Risk__c</fullName>
    <label>Risk ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>