force-app/main/default/objects/Account/fields/lco1__At_Risk__c.field-meta.xml
<CustomField>
    <fullName>lco1__At_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Risk</label>
    <type>Checkbox</type>
</CustomField>