force-app/main/default/objects/Account/fields/lco1__Budget__c.field-meta.xml
<CustomField>
    <fullName>lco1__Budget__c</fullName>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>