force-app/main/default/objects/Account/fields/lco1__Days_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>lco1__Days_Since_Last_Activity__c</fullName>
    <description>This field is deprecated starting from v1.284.</description>
    <formula>today() -  LastActivityDate</formula>
    <label>DEPRECATED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>