force-app/main/default/objects/Account/fields/lco1__Has_Upside__c.field-meta.xml
<CustomField>
    <fullName>lco1__Has_Upside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Upside</label>
    <type>Checkbox</type>
</CustomField>