force-app/main/default/objects/Account/fields/lco1__Upside_Amount__c.field-meta.xml
<CustomField>
    <fullName>lco1__Upside_Amount__c</fullName>
    <label>Upside ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>