force-app/main/default/objects/Account/fields/Listing_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Listing_Sort_Order__c</fullName>
    <label>Listing Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>