force-app/main/default/objects/Account/fields/Loan_Payoff__c.field-meta.xml
<CustomField>
    <fullName>Loan_Payoff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates if an Account utilizes IAA&apos;s Loan Payoff portal.</description>
    <inlineHelpText>Designates if an Account utilizes IAA&apos;s Loan Payoff portal.</inlineHelpText>
    <label>Loan Payoff</label>
    <type>Checkbox</type>
</CustomField>