force-app/main/default/objects/Account/fields/Location_County__c.field-meta.xml
<CustomField>
    <fullName>Location_County__c</fullName>
    <label>Location County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>