force-app/main/default/objects/Account/fields/loggedIn_User__c.field-meta.xml
<CustomField>
    <fullName>loggedIn_User__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>loggedIn User</label>
    <type>Text</type>
</CustomField>