force-app/main/default/objects/Account/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>For Licensed Broker List on Help Community</description>
    <inlineHelpText>URL of image uploaded. Format is: /servlet/servlet.ImageServer?id={ImageID}&amp;oid={OrgID}</inlineHelpText>
    <label>Logo</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>