force-app/main/default/objects/Account/fields/Loss_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Loss_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if an Account utilizes IAA&apos;s Loss Advisor vehicle damage scoring engine.</description>
    <inlineHelpText>Displays if an Account utilizes IAA&apos;s Loss Advisor vehicle damage scoring engine.</inlineHelpText>
    <label>Loss Advisor</label>
    <type>Checkbox</type>
</CustomField>