force-app/main/default/objects/Account/fields/Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>Mailing_County__c</fullName>
    <label>Mailing_County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>