force-app/main/default/objects/Account/fields/medallia_xm__Medallia_Include_in_surveys__c.field-meta.xml
<CustomField>
    <fullName>medallia_xm__Medallia_Include_in_surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medallia_Include_in_surveys</label>
    <type>Checkbox</type>
</CustomField>