force-app/main/default/objects/Account/fields/Membership_Duration__c.field-meta.xml
<CustomField>
    <fullName>Membership_Duration__c</fullName>
    <description>Shows how long a Buyer/Broker/BrokerBidder has been a member.</description>
    <inlineHelpText>Shows how long a Buyer/Broker/BrokerBidder has been a member.</inlineHelpText>
    <label>Membership Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>