force-app/main/default/objects/Account/fields/Min_Bid__c.field-meta.xml
<CustomField>
    <fullName>Min_Bid__c</fullName>
    <description>Min. Bid for stock during Sale</description>
    <label>Min. Bid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>