force-app/main/default/objects/Account/fields/Monday_Closed_At__c.field-meta.xml
<CustomField>
    <fullName>Monday_Closed_At__c</fullName>
    <label>Closed At</label>
    <type>Time</type>
</CustomField>