force-app/main/default/objects/Account/fields/Monday_Open_From__c.field-meta.xml
<CustomField>
    <fullName>Monday_Open_From__c</fullName>
    <label>Open From</label>
    <type>Time</type>
</CustomField>