force-app/main/default/objects/Account/fields/Monday_Unavailable_From__c.field-meta.xml
<CustomField>
    <fullName>Monday_Unavailable_From__c</fullName>
    <label>Unavailable From</label>
    <type>Time</type>
</CustomField>