force-app/main/default/objects/Account/fields/Monday_Unavailable_To__c.field-meta.xml
<CustomField>
    <fullName>Monday_Unavailable_To__c</fullName>
    <label>Unavailable To</label>
    <type>Time</type>
</CustomField>