force-app/main/default/objects/Account/fields/Name_of_Credit_Line_AFC_WL_NG__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Credit_Line_AFC_WL_NG__c</fullName>
    <label>Name of Credit Line (AFC/WL/NG)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFC</fullName>
            </value>
            <value>
                <fullName>Nextgear</fullName>
            </value>
            <value>
                <fullName>Westlake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>