force-app/main/default/objects/Account/fields/OA__CLOSED_ACTIVITIES__c.field-meta.xml
<CustomField>
    <fullName>OA__CLOSED_ACTIVITIES__c</fullName>
    <label>Closed Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>