force-app/main/default/objects/Account/fields/OA__Next_Step__c.field-meta.xml
<CustomField>
    <fullName>OA__Next_Step__c</fullName>
    <label>Next Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>