force-app/main/default/objects/Account/fields/OA__Next_Step_Date__c.field-meta.xml
<CustomField>
    <fullName>OA__Next_Step_Date__c</fullName>
    <label>Next Step Date</label>
    <type>Date</type>
</CustomField>