force-app/main/default/objects/Account/fields/OA__OPEN_ACTIVITIES__c.field-meta.xml
<CustomField>
    <fullName>OA__OPEN_ACTIVITIES__c</fullName>
    <label>Open Activities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>