force-app/main/default/objects/Account/fields/OCR_Status__c.field-meta.xml
<CustomField>
    <fullName>OCR_Status__c</fullName>
    <label>OCR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Technical Issues</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Info Edited</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>