force-app/main/default/objects/Account/fields/of_Actual_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>of_Actual_vs_Goal__c</fullName>
    <formula>If( YTD_Vehicles_Sold_Goal_Form__c  = 0, Null,
If(ISBLANK(  YTD_Vehicles_Sold_Goal_Form__c  ), Null,
( Total_Vehicles_Sold_YTD__c  -  YTD_Vehicles_Sold_Goal_Form__c ) /   YTD_Vehicles_Sold_Goal_Form__c )+1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vehicles sold divided by vehicle goals YTD for current year</inlineHelpText>
    <label>% of YTD Vehicles Sold Actual vs Goal</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>