force-app/main/default/objects/Account/fields/of_Reruns__c.field-meta.xml
<CustomField>
    <fullName>of_Reruns__c</fullName>
    <description>Displays the total number of re-runs a Provider&apos;s account has accrued over the current year. (YTD)</description>
    <inlineHelpText>Displays the total number of re-runs a Provider&apos;s account has accrued over the current year. (YTD)</inlineHelpText>
    <label># of Reruns</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>