force-app/main/default/objects/Account/fields/Opted_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opted_Out_Reason__c</fullName>
    <description>The field displays why the buyer chose to opt out of the auto-renewal program.</description>
    <inlineHelpText>The field displays why the buyer chose to opt out of the auto-renewal program.</inlineHelpText>
    <label>Opted Out Reason</label>
    <type>TextArea</type>
</CustomField>