force-app/main/default/objects/Account/fields/Pain_Points_of_Buyer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points_of_Buyer_Journey__c</fullName>
    <label>Pain Points (of Buyer Journey)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>Buying</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Expiration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>