force-app/main/default/objects/Account/fields/Parent_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Type__c</fullName>
    <description>Record type of the related Parent account</description>
    <formula>Parent.RecordType.DeveloperName</formula>
    <label>Parent Record Type</label>
    <type>Text</type>
</CustomField>