force-app/main/default/objects/Account/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The field displays the buyer&apos;s Auction Center password and is used only by the Buyer Service&apos;s team.</description>
    <inlineHelpText>The field displays the buyer&apos;s Auction Center password and is used only by the Buyer Service&apos;s team.</inlineHelpText>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>