force-app/main/default/objects/Account/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>CC</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>PP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>