force-app/main/default/objects/Account/fields/Phone_Company2__c.field-meta.xml
<CustomField>
    <fullName>Phone_Company2__c</fullName>
    <label>Phone Company2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>