force-app/main/default/objects/Account/fields/Preferred_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Type__c</fullName>
    <inlineHelpText>What is the preferred contact method for this account?</inlineHelpText>
    <label>Preferred Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FTF</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>