force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>Arabic; Chinese; English; French; Polish; Russian; Spanish; Other</fullName>
                <isActive>false</isActive>
                <label>Arabic; Chinese; English; French; Polish; Russian; Spanish; Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>