force-app/main/default/objects/Account/fields/Primary_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segmentation__c</fullName>
    <label>Primary Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Rebuilder</fullName>
            </value>
            <value>
                <fullName>Recycler</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>Exporter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>