force-app/main/default/objects/Account/fields/Prior_Year_Gross_YTD__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Gross_YTD__c</fullName>
    <label>Prior Year Gross (YTD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>