force-app/main/default/objects/Account/fields/Prior_Year_PA__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_PA__c</fullName>
    <description>Displays IAA&apos;s total number of Purchase Agreement units for the Provider.</description>
    <label>Prior Year PA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>