force-app/main/default/objects/Account/fields/Prior_Year_Purchased_Units__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Purchased_Units__c</fullName>
    <label>Prior Year Purchased Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>