force-app/main/default/objects/Account/fields/Promo_Code_Applied__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promo Code Applied</label>
    <type>Checkbox</type>
</CustomField>