force-app/main/default/objects/Account/fields/PROV__c.field-meta.xml
<CustomField>
    <fullName>PROV__c</fullName>
    <label>PROV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>