force-app/main/default/objects/Account/fields/Provider_Last_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Provider_Last_Login_Date__c</fullName>
    <description>The field identifies the last login date on the provider portal. (CSA Today)</description>
    <inlineHelpText>The field identifies the last login date on the provider portal. (CSA Today)</inlineHelpText>
    <label>Provider Last Login Date (CSA Today)</label>
    <type>Date</type>
</CustomField>