force-app/main/default/objects/Account/fields/Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status__c</fullName>
    <description>Status of Provider account</description>
    <inlineHelpText>Status of Provider account</inlineHelpText>
    <label>Provider Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>