force-app/main/default/objects/Account/fields/Purchase_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Frequency__c</fullName>
    <inlineHelpText>How often they purchase (daily, weekly, monthly, etc)</inlineHelpText>
    <label>Purchase Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>