force-app/main/default/objects/Account/fields/Qualifying_for_becoming_broker__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_for_becoming_broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualifying for becoming broker?</label>
    <type>Checkbox</type>
</CustomField>