force-app/main/default/objects/Account/fields/Registration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Document_Type__c</fullName>
    <description>This field displays the &apos;Type&apos; of the most recent expiring registration document for Buyers.</description>
    <inlineHelpText>This field displays the &apos;Type&apos; of the most recent expiring registration document for Buyers.</inlineHelpText>
    <label>Registration Document Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>