force-app/main/default/objects/Account/fields/Registration_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Effective_Date__c</fullName>
    <description>Displays the date when the buyer account can bid at auctions.</description>
    <inlineHelpText>Displays the date when the buyer account can bid at auctions.</inlineHelpText>
    <label>Registration Effective Date</label>
    <type>Date</type>
</CustomField>