force-app/main/default/objects/Account/fields/Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration_Date__c</fullName>
    <description>Displays the date when the buyer account will expire.</description>
    <inlineHelpText>Displays the date when the buyer account will expire.</inlineHelpText>
    <label>Registration Expiration Date</label>
    <type>Date</type>
</CustomField>