force-app/main/default/objects/Account/fields/Registration_Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Setup_Date__c</fullName>
    <description>Displays the date when the buyer account was set up.</description>
    <inlineHelpText>Displays the date when the buyer account was set up.</inlineHelpText>
    <label>Registration Setup Date</label>
    <type>Date</type>
</CustomField>