force-app/main/default/objects/Account/fields/Registration_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Transaction_Id__c</fullName>
    <label>Registration Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>